music section, add backend

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         </li>
         <li>
           <div class="timeline-content animate-me">
+            <img src="data/ADP.png" alt="ADP Logo" class="company-logo" />
+            <!-- Add this line -->
             <h3>Associate Application Developer</h3>
             <span>ADP, Incoming</span>
           </div>
@@ -103,6 +105,7 @@
         </li>
         <li>
           <div class="timeline-content animate-me">
+            <img src="data/ADP.png" alt="ADP Logo" class="company-logo" />
             <h3>Global Product and Technology Intern</h3>
             <span>ADP, June-Aug 2023</span>
             <p>Optimized ML solutions for client onboarding.</p>
@@ -117,7 +120,9 @@
 
         <li>
           <div class="timeline-content animate-me">
+            <img src="data/MDSA.webp" alt="ADP Logo" class="company-logo" />
             <h3>Software Engineer</h3>
+
             <span
               >Mood Disorder Society of Canada (MIRA Chatbot), May-Aug
               2022</span
@@ -148,11 +153,108 @@
         <!-- Repeat for other experiences -->
       </ul>
     </section>
-    <section id="projects">
+    <section id="projects" class="projects">
       <h1>Projects</h1>
+      <div class="projects-container">
+        <!-- Project Card -->
+        <div class="project-card">
+          <img
+            src="data/knowledge_graph.png"
+            alt="Knowledge graph"
+            class="project-image"
+          />
+          <div class="project-info">
+            <h3>Knowledge Graph generator</h3>
+            <p>
+              A web app that generates an interactive graphical and text-based
+              knowledge graph from an input text.
+            </p>
+            <a
+              target="_blank"
+              href="https://knowledge-graph-mu.vercel.app/"
+              class="project-link"
+              >Check it out</a
+            >
+          </div>
+          <div class="project-card">
+            <img
+              src="data/knowledge_graph.png"
+              alt="Knowledge graph"
+              class="project-image"
+            />
+            <div class="project-info">
+              <h3>Knowledge Graph generator</h3>
+              <p>
+                A web app that generates an interactive graphical and text-based
+                knowledge graph from an input text.
+              </p>
+              <a
+                target="_blank"
+                href="https://knowledge-graph-mu.vercel.app/"
+                class="project-link"
+                >Check it out</a
+              >
+            </div>
+        </div>
+        <!-- Repeat for other projects -->
+      </div>
     </section>
-    <section id="music">
+    <section id="music" class="music">
       <h1>Music</h1>
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/playlist/46lV94DEEZ3UPhB23gmKtt?utm_source=generator"
+        width="100%"
+        height="600"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+
+      <div>
+        <div class="quote">
+          <em>
+            "It's a beautiful piece. Execution needs some work. [walks over to
+            the piano] May I suggest on the 7th bar of the adagio andante that
+            you add a little fortissimo on the arpeggiated B♭ scale."</em
+          >
+        </div>
+        <div class="music-links">
+          <p>
+            <a
+              href="https://www.youtube.com/watch?v=GbP8dZ76DBw&feature=youtu.be"
+            >
+              Destenay, trio in b minor for piano, oboe and clarinet, op.27
+            </a>
+            - Oboist: Tommy He, Clarinetist: Jihoon Jeon
+          </p>
+          <p>
+            Khachaturian - Trio for Violin, Clarinet and Piano - Clarinetist:
+            Jihoon Jeon, Violinist: Zein Nakhleh
+          </p>
+          <a href="/audio/mvmt1" target="_blank" style="display: block">
+            1st Movement
+          </a>
+
+          <a href="/audio/mvmt3" target="_blank"> 3rd Movement </a>
+          <p>
+            <a href="https://www.youtube.com/watch?v=nyrs6DvTErQ" isExternal>
+              Johannes Brahms - Clarinet Sonata No. 1, Op. 120 II. Andante un
+              poco adagio
+            </a>
+            - Clarinetist: Jihoon Jeon
+          </p>
+          <p>
+            <a
+              href="https://www.youtube.com/watch?v=_noMttC3-Gc&ab_channel=McGillClassicalMusicClub"
+              targe="_blank"
+              >Arutiunian - Trumpet Concerto in A♭ major</a
+            >
+            - Trumpeter: Thien Pham
+          </p>
+        </div>
+      </div>
     </section>
     <section id="course-notes">
       <h1>Notes</h1>
