finish projects section

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         />
         <!-- <p class="image-caption animate-me">@ Tipsy Cow</p> -->
 
-        <a
+        <!-- <a
           class="image-caption animate-me"
           href="https://www.instagram.com/tipsycowmtl/"
           target="_blank"
           style="display: block"
           >@Tipsy Cow</a
-        >
+        > -->
 
         <!-- Caption for the image -->
       </div>
@@ -176,28 +176,50 @@
               >Check it out</a
             >
           </div>
-          <div class="project-card">
+          
+        </div>
+        <div class="project-card">
             <img
-              src="data/knowledge_graph.png"
-              alt="Knowledge graph"
+              src="data/apple.png"
+              alt="Finance Dashboard"
               class="project-image"
             />
             <div class="project-info">
-              <h3>Knowledge Graph generator</h3>
+              <h3>Personal Finance Dashboard</h3>
               <p>
-                A web app that generates an interactive graphical and text-based
-                knowledge graph from an input text.
+                A responsive fullstack app allowing users to view market trends, 
+                latest financial news and track their portfolio.
               </p>
               <a
                 target="_blank"
-                href="https://knowledge-graph-mu.vercel.app/"
+                href="https://github.com/emmanuel-bob-ma-joey/financial_dashboard"
                 class="project-link"
                 >Check it out</a
               >
             </div>
-        </div>
+           
         <!-- Repeat for other projects -->
       </div>
+      <div class="project-card">
+        <img
+          src="data/C.png"
+          alt="C-lang logo"
+          class="project-image"
+        />
+        <div class="project-info">
+          <h3>Mini C Compiler</h3>
+          <p>
+            A compiler for a mini-c language with mips assembly as the target 
+            language. Semester long project for a compiler design course 
+            (COMP520).
+          </p>
+          <!-- <a
+            target="_blank"
+            href="https://knowledge-graph-mu.vercel.app/"
+            class="project-link"
+            >Check it out</a
+          > -->
+        </div>
     </section>
     <section id="music" class="music">
       <h1>Music</h1>
@@ -224,6 +246,7 @@
           <p>
             <a
               href="https://www.youtube.com/watch?v=GbP8dZ76DBw&feature=youtu.be"
+              target="_blank"
             >
               Destenay, trio in b minor for piano, oboe and clarinet, op.27
             </a>
@@ -258,6 +281,7 @@
     </section>
     <section id="course-notes">
       <h1>Notes</h1>
+      <p>(I promise I took notes, will add them at a later date)</p>
     </section>
 
     <!-- <p class="animate-me">Rachmaninoff: Piano Sonata No.2, Op.36</p>
