update introductory text

--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
       </div>
       <div class="intro-text">
         <p class="animate-me">
-          Hi, I'm Emmanuel! I'm a 3rd year software engineering student @McGill
-          with a minor in philosophy, currently interning at Automatic Data
-          Processing (ADP). During the school year I am a helpdesk tutor for
-          CSUS McGill and workshop lead for the competitive programming club. In
-          my free time I enjoy running, competing for the McGill Poker team,
-          playing table tennis, and practicing piano or violin.
+          Hi I'm Emmanuel, I'm a 4th year software engineering student at McGill University. Here are some of the things I'm currently working on:
+
         </p>
+        <ul>
+          <li><a href="https://knowledge-graph-mu.vercel.app/" target="_blank">Knowledge graph generator</a></li>
+          <li><a href="https://www.youtube.com/watch?v=BHcg0QS_8UI&ab_channel=LucasAntonioTujan" target="_blank">Mendelssohn - Etude Op. 104 No. 1</a></li>
+          <li><a href="https://www.youtube.com/watch?v=KzJYbaAp7eQ&t=1122s&ab_channel=AshishXiangyiKumar" target="_blank">Chopin - Ballade No. 1 in G minor Op. 23</a></li>
+          <li>Sub 18:30 5k</li>
+        </ul>
       </div>
     </section>
     <section id="experience" class="timeline">
