--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="about" class="about">
       <div class="image-container">
         <img
-          class="animate-me"
+   
           src="data/profile.jpg"
           alt="Emmanuel Ma"
           width="325"
@@ -40,17 +40,23 @@
         > -->
 
         <!-- Caption for the image -->
+        
+        
+      </div>
+      <div class="links-container">
+        <a  href="https://www.linkedin.com/in/emmanuel-ma/">Linkedin</a>
+        <a href="https://github.com/emmanuel-bob-ma-joey" target="_blank">Github</a>
       </div>
       <div class="intro-text">
         <p class="animate-me">
           Hi I'm Emmanuel, I'm a 4th year software engineering student at McGill University. Here are some of the things I'm currently working on:
 
         </p>
-        <ul>
-          <li><a href="https://knowledge-graph-mu.vercel.app/" target="_blank">Knowledge graph generator</a></li>
-          <li><a href="https://www.youtube.com/watch?v=BHcg0QS_8UI&ab_channel=LucasAntonioTujan" target="_blank">Mendelssohn - Etude Op. 104 No. 1</a></li>
-          <li><a href="https://www.youtube.com/watch?v=KzJYbaAp7eQ&t=1122s&ab_channel=AshishXiangyiKumar" target="_blank">Chopin - Ballade No. 1 in G minor Op. 23</a></li>
-          <li>Sub 18:30 5k</li>
+        <ul >
+          <li ><a class="animate-me" href="https://knowledge-graph-mu.vercel.app/" target="_blank">Knowledge graph generator</a></li>
+          <li ><a class="animate-me" href="https://www.youtube.com/watch?v=BHcg0QS_8UI&ab_channel=LucasAntonioTujan" target="_blank">Mendelssohn - Etude Op. 104 No. 1</a></li>
+          <li ><a class="animate-me" href="https://www.youtube.com/watch?v=KzJYbaAp7eQ&t=1122s&ab_channel=AshishXiangyiKumar" target="_blank">Chopin - Ballade No. 1 in G minor Op. 23</a></li>
+          <li class="animate-me">Sub 18:30 5k</li>
         </ul>
       </div>
     </section>
