--- a/index.html
+++ b/index.html
@@ -265,10 +265,20 @@
             Khachaturian - Trio for Violin, Clarinet and Piano - Clarinetist:
             Jihoon Jeon, Violinist: Zein Nakhleh
           </p>
-          <a class="animate-me" href="data/Mvt-1.wav" target="_blank" isExternal style="display: block">
+          <p class="animate-me">1st Movement</p>
+          <audio controls class="animate-me">
+            <source src="data/Mvt-3.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          <p class="animate-me">3rd Movement</p>
+          <!-- <a class="animate-me" href="data/Mvt-1.wav" target="_blank"  style="display: block">
             1st Movement
-          </a>
-          <a class="animate-me" href="data/Mvt-3.wav" target="_blank" isExternal style="display: block"> 3rd Movement </a>
+          </a> -->
+          <audio controls class="animate-me">
+            <source src="data/Mvt-1.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          <!-- <a class="animate-me" href="data/Mvt-3.wav" target="_blank"  style="display: block"> 3rd Movement </a> -->
           <p class="animate-me">
             <a href="https://www.youtube.com/watch?v=nyrs6DvTErQ" isExternal>
               Johannes Brahms - Clarinet Sonata No. 1, Op. 120 II. Andante un
