fix navbar position and change audio url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- <script src="index.js"></script> -->
 
-    <!-- Place this inside the <body> tag -->
+
     <nav id="navbar" class="minimal-navbar">
       <a href="#about">About</a>
       <a href="#experience">Experience</a>
@@ -267,7 +267,7 @@
           </p>
           <p class="animate-me">1st Movement</p>
           <audio controls class="animate-me">
-            <source src="assets/audio/Mvt-3.wav" type="audio/wav">
+            <source src="https://www.emmanuelma.com/assets/audio/Mvt-1.wav" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
           <p class="animate-me">3rd Movement</p>
@@ -275,7 +275,7 @@
             1st Movement
           </a> -->
           <audio controls class="animate-me">
-            <source src="assets/audio/Mvt-1.wav" type="audio/wav">
+            <source src="https://www.emmanuelma.com/assets/audio/Mvt-3.wav" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
           <!-- <a class="animate-me" href="data/Mvt-3.wav" target="_blank"  style="display: block"> 3rd Movement </a> -->
