--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Emmanuel Ma</title>
-     <link rel="icon" type="image/x-icon" href="/favico.ico">
+     <link rel="icon" type="image/x-icon" href="favico.ico">
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   </head>
@@ -24,7 +24,7 @@
       <div class="image-container">
         <img
    
-          src="/images/profile.jpg"
+          src="assets/images/profile.jpg"
           alt="Emmanuel Ma"
           width="325"
           height="445"
@@ -88,7 +88,7 @@
         </li>
         <li>
           <div class="timeline-content animate-me">
-            <img src="/images/ADP.png" alt="ADP Logo" class="company-logo" />
+            <img src="assets/images/ADP.png" alt="ADP Logo" class="company-logo" />
             <!-- Add this line -->
             <h3>Associate Application Developer</h3>
             <span>ADP, Incoming</span>
@@ -114,7 +114,7 @@
         </li>
         <li>
           <div class="timeline-content animate-me">
-            <img src="/images/ADP.png" alt="ADP Logo" class="company-logo" />
+            <img src="assets/images/ADP.png" alt="ADP Logo" class="company-logo" />
             <h3>Global Product and Technology Intern</h3>
             <span>ADP, June-Aug 2023</span>
             <p>Optimized ML solutions for client onboarding.</p>
@@ -129,7 +129,7 @@
 
         <li>
           <div class="timeline-content animate-me">
-            <img src="/images/MDSA.webp" alt="ADP Logo" class="company-logo" />
+            <img src="assets/images/MDSA.webp" alt="ADP Logo" class="company-logo" />
             <h3>Software Engineer</h3>
 
             <span
@@ -168,7 +168,7 @@
         <!-- Project Card -->
         <div class="project-card animate-me">
           <img
-            src="/images/knowledge_graph.png"
+            src="assets/images/knowledge_graph.png"
             alt="Knowledge graph"
             class="project-image"
           />
@@ -189,7 +189,7 @@
         </div>
         <div class="project-card animate-me">
             <img
-              src="/images/apple.png"
+              src="assets/images/apple.png"
               alt="Finance Dashboard"
               class="project-image"
             />
@@ -211,7 +211,7 @@
       </div>
       <div class="project-card animate-me">
         <img
-          src="/images/C.png"
+          src="assets/images/C.png"
           alt="C-lang logo"
           class="project-image"
         />
@@ -267,7 +267,7 @@
           </p>
           <p class="animate-me">1st Movement</p>
           <audio controls class="animate-me">
-            <source src="/audio/Mvt-1.wav" type="audio/wav">
+            <source src="https://www.emmanuelma.com/assets/audio/Mvt-1.wav" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
           <p class="animate-me">3rd Movement</p>
@@ -275,7 +275,7 @@
             1st Movement
           </a> -->
           <audio controls class="animate-me">
-            <source src="/audio/Mvt-3.wav" type="audio/wav">
+            <source src="https://www.emmanuelma.com/assets/audio/Mvt-3.wav" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
           <!-- <a class="animate-me" href="data/Mvt-3.wav" target="_blank"  style="display: block"> 3rd Movement </a> -->
