--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </a>
             - Oboist: Tommy He, Clarinetist: Jihoon Jeon
           </p>
-          <p class="animate-me">
+          <!-- <p class="animate-me">
             Khachaturian - Trio for Violin, Clarinet and Piano - Clarinetist:
             Jihoon Jeon, Violinist: Zein Nakhleh
           </p>
@@ -270,14 +270,14 @@
             <source src="https://www.emmanuelma.com/assets/audio/Mvt-1.wav" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
-          <p class="animate-me">3rd Movement</p>
+          <p class="animate-me">3rd Movement</p> -->
           <!-- <a class="animate-me" href="data/Mvt-1.wav" target="_blank"  style="display: block">
             1st Movement
           </a> -->
-          <audio controls class="animate-me">
+          <!-- <audio controls class="animate-me">
             <source src="https://www.emmanuelma.com/assets/audio/Mvt-3.wav" type="audio/wav">
             Your browser does not support the audio element.
-          </audio>
+          </audio> -->
           <!-- <a class="animate-me" href="data/Mvt-3.wav" target="_blank"  style="display: block"> 3rd Movement </a> -->
           <p class="animate-me">
             <a href="https://www.youtube.com/watch?v=nyrs6DvTErQ" isExternal>
